add meta tags for social media platforms

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>🌊</title>
+	<title>Wavy line animation</title>
 	<script src="./main.js"></script>
 	<link rel="stylesheet" href="main.scss">
+
+	<meta property="og:image" content="/waves.png">
+	<meta property="twitter:image" content="/waves.png">
+	<meta name="description" content="A procedurally generated set of wavy lines">
 </head>
 <body>
 	
