add a "summary_large_image" property

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<script src="./main.js"></script>
 	<link rel="stylesheet" href="main.scss">
 
+	<meta name="twitter:card" content="summary_large_image">
 	<meta property="og:image" content="/waves.png">
 	<meta property="twitter:image" content="/waves.png">
 	<meta name="description" content="A procedurally generated set of wavy lines">
